--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "5.3.3",
+    "@types/redux-form": "^8.3.5",
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
+    "redux-form": "^8.3.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
