--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-form": "^8.3.8",
+    "reselect": "^4.1.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
